# yadang

./: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  docker-build-push.yml  vector-api-fastapi-ci.yml
app/: globals.css  layout.tsx
app/(site)/: page.tsx
app/admin/: page.tsx
components/patent-lens/: admin-console-auto-credit.tsx  admin-console-feedback.tsx  admin-console-shared.ts  admin-console-user-management.tsx  admin-console.tsx  app-shell.tsx  auth-dialog.tsx  footer.tsx  header.tsx  history-sidebar.tsx  landing.tsx  library-option.tsx  patent-detail.tsx  recharge-dialog-checkout.ts  recharge-dialog-pay-view.tsx  recharge-dialog-records-view.tsx  (+5 more)
doc/: alipay-integration-config.md  ci-docker.md  env-config.md  logging-trace-guide.md  payment-change-guide.md  payment-env-config-manual.md  payment-integration-manual.md  project-handover-guide.md  trademark-search-deploy-and-init.md
helloagents/: CHANGELOG.md  project.md
lib/: constants.ts  env.ts  money.ts  types.ts
scripts/: init-auth-method-config.ts  init-payment-config.ts  init-trademark-search-config.ts
services/vector-api-fastapi/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/vector-api-fastapi/app/: __init__.py  config.py  inference.py  main.py  schemas.py
services/vector-api-fastapi/doc/: development-workflow.md
stores/: patent-lens.ts
types/: ali-oss.d.ts  prisma-generated.d.ts  qrcode.d.ts
(+91 files in other folders)
